--- a/apps/web/src/pages/blocks/index.astro
+++ b/apps/web/src/pages/blocks/index.astro
@@ -11,6 +11,7 @@ const blocks = await getCollection("blocks");
 <script src="//unpkg.com/alpinejs" defer></script>
 
 <StarlightPage
+  hasSidebar={true}
   frontmatter={{
     title: "Building blocks for content-driven sites.",
     template: "splash",
