--- a/apps/web/src/pages/t/[id].astro
+++ b/apps/web/src/pages/t/[id].astro
@@ -83,6 +83,7 @@ const cliCommands = {
 ---
 
 <StarlightPage
+  hasSidebar={true}
   frontmatter={{ title: `Install Theme: ${theme.name}`, template: "splash" }}
 >
   <div class="not-content">
