--- a/apps/web/src/pages/blocks/[slug].astro
+++ b/apps/web/src/pages/blocks/[slug].astro
@@ -19,6 +19,7 @@ export async function getStaticPaths() {
 <script src="//unpkg.com/alpinejs" defer></script>
 
 <StarlightPage
+  hasSidebar={true}
   frontmatter={{
     title: "Building blocks for content-driven sites.",
     template: "splash",
