--- a/packages/starlight-theme-bejamas/src/overrides/PageFrame.astro
+++ b/packages/starlight-theme-bejamas/src/overrides/PageFrame.astro
@@ -238,7 +238,7 @@ const isSplashTemplate = template === "splash";
       }
     }
 
-    .main-frame-inner::before,
+    /* .main-frame-inner::before,
     .main-frame-inner::after {
       content: "";
       position: absolute;
@@ -258,7 +258,7 @@ const isSplashTemplate = template === "splash";
 
     .main-frame-inner::after {
       right: -1px;
-    }
+    } */
 
     @media (min-width: 50rem) {
       :global([data-has-sidebar]) .header,
